# tars

./: .gitignore  README.md  pyproject.toml  run_app.py  test.ipynb
tars_ui/: app.py  constants.py  test.ipynb  ui_components.py
tars_ui/chat/: azure_openai_client.py
tars_ui/face/: app.py  azure.py  base.py  deepface_provider.py  emotions_model.py  face_recognition.py  incoresoft.py  local.py  vision.py
tars_ui/face_providers/: azure.py
tars_ui/voice/: audio_voice.py  azure_speech.py  azure_voice_live.py
tars_ui_backup/: app.py
tests/: test_azure_face.py
